--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : # "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "liangfen-photo-square.jpg"
+  avatar           : "liangfen-photo.jpg"
   name             : "Liangfen Du (杜良芬)"
   pronouns         : # example: "she/her"  
   bio              : "Assistant Professor at Hong Kong Polytechnic Univeristy"
