--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,8 @@ main:
   - title: "Team"
     url: /team/
 
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research"
+    url: /research/   
 
   - title: "Teaching"
     url: /teaching/    
