--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=idn8CHAAAAAJ"
-  linkedin         : "https://www.linkedin.com/in/liangfen-du-a8770257/"
+  linkedin         : "liangfen-du-a8770257"
   researchgate     : "https://www.researchgate.net/profile/Liangfen-Du"
  
   impactstory      : # URL
