add LY visit polyu

--- a/_data/activities.yml
+++ b/_data/activities.yml
@@ -1,3 +1,9 @@
+- date: "08/2025"
+  images:
+    - src: "/images/2025-08-06_214507.jpg"
+      alt: "PolyU-2 2025"
+  description: Prof. Yong Li from the Institute of Acoustics at Tongji University visited our Acoustics Lab, where we engaged in an in-depth discussion on potential future collaborations. We sincerely appreciate Prof. Li’s valuable suggestions and insights on our ongoing research.
+
 - date: "07/2025"
   images:
     - src: "/images/2025-07-25_070607.jpg"
