--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,22 @@
+- authors: "Zichao Guo, Liangfen Du, Zirui Yang, Kexin Zeng, Ziping Lei, Zhonggang Wang, Zhendong Li, and Zheng Fan"
+  title: "Switchable Bidirectional Sound Absorption Via Exceptional Point Modulation in Acoustic Metastructures with Interleaved Resonator Coupling."
+  journal: "Advanced science (Weinheim, Baden-Wurttemberg, Germany)"
+  year: 2024
+  pages: "e08951"
+
+- authors: "Tong Zhou, Liangfen Du"
+  title: "Multi-frequency acoustic wave control using acoustic meta-gratings."
+  journal: "The 31th International Congress on Sound and Vibration"
+  year: 2025
+  location: "Incheon, Korea, July 5-11"
+
+- authors: "Xiangyu Wang, Liangfen Du, Zhenbang Liu, Mingyang Li, Yiwei Weng, Zhixin Liu, Yi Wei Daniel Tay, Zheng Fan, Teck Neng Wong, Ming Jen Tan"
+  title: "3D cementitious composites printing with pretreated recycled crumb rubber: mechanical and acoustic insulation properties."
+  journal: "Virtual and Physical Prototyping"
+  year: 2024
+  volume: "19(1)"
+  pages: "e2399787"
+
 - authors: "Johanna Kay Ann Tan, Liangfen Du, Siu-Kit Lau"
   title: "Optimization of single-channel active noise control performance in a plenum window using the surface impedance approach."
   journal: "The Journal of the Acoustical Society of America"
