--- a/_data/activities.yml
+++ b/_data/activities.yml
@@ -1,3 +1,9 @@
+- date: "11/2025"
+  images:
+    - src: "/images/2025-11-CKJ-Composite.jpg"
+      alt: "CKJ Composite 2025"
+  description: "Prof. Du was invited to deliver a talk at the 3rd China–Korea–Japan Joint Symposium on Composite Materials (pictured with the session chair Prof. Yi-Ze Wang from Tianjin University)."
+
 - date: "08/2025"
   images:
     - src: "/images/image_20250820.jpg"
