--- a/_data/team.yml
+++ b/_data/team.yml
@@ -42,59 +42,10 @@ phd_students:
       - degree: "B.S"
         university: "Beijing Jiaotong University"
 
-  - name: "Wang Ziyu (王梓玉)"
-    image: "/images/wang_ziyu.png"
-    title: "PhD Candidate, Visiting Student"
-    research: "small room acoustics; vehicle acoustics; sound field simulation; acoustic modes property; spatial hearing perception"
-    education:
-      - degree: "Ph.D Candidate"
-        university: "South China University of Technology"
-      - degree: "B.S"
-        university: "Ocean University of China"
-    contact:
-      - type: "email"
-        url: "mailto:Wzy18197181423@163.com"
-      - type: "researchgate"
-        url: "https://www.researchgate.net/profile/Ziyu-Wang-127"
-
 alumni:
-  - name: "MA Kai (马凯)"
-    image: "/images/ma_kai.jpeg"
-    title: "PhD, Visiting Student (2024.08-2025.08)"
-    research_topics:
-      - "Nonlinear vibration and noise reduction characteristics of motor-centrifugal pump coupling system"
-      - "Nonlinear torsional vibration characteristics of rotating shafting coupled with nonlinear energy sink"
-    education:
-      - degree: "Ph.D"
-        university: "Harbin Engineering University"
-      - degree: "M.Sc/M.Eng"
-        university: "Harbin Engineering University"
-      - degree: "B.S/B.Eng"
-        university: "Yantai university"
-    contact:
-      - type: "email"
-        url: "mailto:22096252R@connect.polyu.hk"
-      - type: "researchgate"
-        url: "https://www.researchgate.net/profile/Kai-Ma-46/research"
-
+  - name: "Wang Ziyu (王梓玉)"
+    title: "Ph.D., visiting student (2025.08~2026.02)"
+  - name: "Ma Kai (马凯)"
+    title: "Ph.D., visiting student (2024.08~2025.08)"
   - name: "LAM Wai Kit Adrian"
-    image: "/images/lam_wai_kit.jpeg"
-    title: "PhD Candidate, Research Assistant (2024.10~2024.12)"
-    research_topics:
-      - "Analysis of the Acoustic Performance of Plenum Windows Installed with Sonic Crystals and Resonant Structures"
-      - "Acoustic Performance Prediction for Plenum Windows Using Artificial Neural Networks"
-      - "Investigation of Acoustic Perfect Absorption and Rainbow Trapping Effect Achieved Through Split-Ring Resonators"
-    education:
-      - degree: "Ph.D"
-        university: "The Hong Kong Polytechnic University (PolyU)"
-      - degree: "B.S/B.Eng"
-        university: "The Chinese University of Hong Kong (CUHK)"
-    contact:
-      - type: "email"
-        url: "mailto:wai-kit-adrian.lam@connect.polyu.hk"
-      - type: "googlescholar"
-        url: "https://scholar.google.com/citations?user=3576az4AAAAJ&hl=en"
-      - type: "researchgate"
-        url: "https://www.researchgate.net/profile/Adrian-Lam-3"
-      - type: "linkedin"
-        url: "https://www.linkedin.com/in/adrian-lam-waikit70"
+    title: "Research Assistant (2024.10~2024.12)"
