docs: 更新研究项目列表，移除金额并添加新项目
- 移除各项目详情中的具体金额，保持格式统一
- 在列表顶部新增一项研究项目
- 将“Principle Investigator”更正为“Principal Investigator”

--- a/_data/research_projects.yml
+++ b/_data/research_projects.yml
@@ -1,23 +1,27 @@
+- title: Pilot investigation of lung inflammatory and remodelling responses to traffic-related PM₂.₅ and noise co-exposure in mice.
+  details: (PolyU Start-up Fund for RAPs under the Strategic Hiring Scheme)
+  role: Co-Investigator
+
 - title: A novel acoustic metagrating barrier for traffic noise reduction.
-  details: (Environment and Conservation Fund, HKD 760,592.)
-  role: Principle Investigator
+  details: (Environment and Conservation Fund)
+  role: Principal Investigator
 
 - title: Outgoing Visit to University College London.
-  details: (PAIR International Collaboration Scheme, HKD 21,606.9)
-  role: Principle Investigator
+  details: (PAIR International Collaboration Scheme)
+  role: Principal Investigator
 
 - title: Upgrading BEEE laboratory facilities to enable advanced researches through improved Safety, Security and Sustainability.
-  details: (BEEE Safety Research Fund, HKD 1.5M, HKD 0.3M awarded to Dr. DU.)
+  details: (BEEE Safety Research Fund)
   role: Co-Investigator
 
 - title: Traffic noise reduction enabling natural ventilation using ultracompact acoustic metagratings.
-  details: (PolyU (UGC) Start-up Fund for New Recruits, HKD 1,000,000.)
-  role: Principle Investigator
+  details: (PolyU (UGC) Start-up Fund for New Recruits)
+  role: Principal Investigator
 
 - title: Meta-surface based broadband ultrasonic deep-subwavelength imaging
-  details: (MOE AcRF Tier 2, SGD 832,128)
+  details: (MOE AcRF Tier 2)
   role: Main investigator
 
 - title: Enhancing aural comfort in Singapore Homes through NUS-CDL Smart Green Home Test-Bedding Studies
-  details: (NUS – CDL joint grant, SGD 298,000)
+  details: (NUS – CDL joint grant)
   role: Main investigator
