--- a/_data/team.yml
+++ b/_data/team.yml
@@ -69,7 +69,7 @@ phd_students:
 
 alumni:
   - name: "Wang Ziyu (王梓玉)"
-    title: "Ph.D., The South China University of Technology， visiting student (2025.08~2026.02)"
+    title: "Ph.D., The South China University of Technology, visiting student (2025.08~2026.02)"
   - name: "Ma Kai (马凯)"
     title: "Ph.D., Harbin Engineering University, visiting student (2024.08~2025.08)"
   - name: "LAM Wai Kit Adrian"
