--- a/_data/activities.yml
+++ b/_data/activities.yml
@@ -1,3 +1,9 @@
+- date: "02/2026"
+  images:
+    - src: "/images/group_meeting_2026_02.jpg"
+      alt: "Group Meeting 2026-02"
+  description: "We held our first formal group meeting and gathering of 2026. Team members participated in a highly productive discussion and shared updates on their recent work. Yiyi joined the meeting online and presented her study experience at Tesla. It is great to work with such an excellent team."
+
 - date: "01/2026"
   images:
     - src: "/images/2026-01-Beijing-Visit.jpg"
